--- a/common/css/common.css
+++ b/common/css/common.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: 'Hui';
   src: url("../font/HuiFont29.ttf") format("truetype");
@@ -116,6 +115,10 @@
     width: 23.2vw;
     height: 20vw;
   }
+}
+
+.slide {
+  overflow: hidden;
 }
 
 .slide-item {
@@ -319,130 +322,5 @@
   text-align: center;
   line-height: 60px;
   color: #bab601;
-}
-
-/*========= 流体シェイプを動かす ===============*/
-.fluid {
-  position: relative;
-}
-
-.fluid-wrap {
-  width: 100%;
-  overflow: hidden;
-}
-
-.fluid::before {
-  z-index: -1;
-  content: "";
-  position: absolute;
-  display: block;
-  width: 31.25vw;
-  /*横幅*/
-  height: 31.25vw;
-  /*縦幅*/
-  background: #bab601;
-  -webkit-animation: fluidrotate 10s ease  infinite;
-          animation: fluidrotate 10s ease  infinite;
-  /*アニメーションの設定*/
-  right: -50px;
-  top: -200px;
-}
-
-.fluid2 {
-  display: block;
-  -webkit-animation: fluidrotate2 20s ease infinite;
-          animation: fluidrotate2 20s ease infinite;
-  /*アニメーションの設定*/
-  right: -50px;
-  top: 100px;
-}
-
-@-webkit-keyframes fluidrotate {
-  0%, 100% {
-    border-radius: 50% 50% 52% 48% / 34% 60% 40% 66%;
-  }
-  25% {
-    border-radius: 50% 50% 73% 27% / 11% 44% 56% 89%;
-  }
-  50% {
-    border-radius: 47% 53% 47% 53% / 49% 44% 56% 51%;
-  }
-  75% {
-    border-radius: 25% 75% 78% 22% / 49% 44% 56% 51%;
-  }
-}
-
-@keyframes fluidrotate {
-  0%, 100% {
-    border-radius: 50% 50% 52% 48% / 34% 60% 40% 66%;
-  }
-  25% {
-    border-radius: 50% 50% 73% 27% / 11% 44% 56% 89%;
-  }
-  50% {
-    border-radius: 47% 53% 47% 53% / 49% 44% 56% 51%;
-  }
-  75% {
-    border-radius: 25% 75% 78% 22% / 49% 44% 56% 51%;
-  }
-}
-
-@-webkit-keyframes fluidrotate2 {
-  0%, 100% {
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-  }
-  25% {
-    border-radius: 91% 9% 70% 30% / 30% 84% 16% 70%;
-  }
-  50% {
-    border-radius: 91% 9% 50% 50% / 52% 84% 16% 48%;
-  }
-  75% {
-    border-radius: 11% 89% 8% 92% / 87% 16% 84% 13%;
-  }
-}
-
-@keyframes fluidrotate2 {
-  0%, 100% {
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-  }
-  25% {
-    border-radius: 91% 9% 70% 30% / 30% 84% 16% 70%;
-  }
-  50% {
-    border-radius: 91% 9% 50% 50% / 52% 84% 16% 48%;
-  }
-  75% {
-    border-radius: 11% 89% 8% 92% / 87% 16% 84% 13%;
-  }
-}
-
-.anm-slide_left {
-  position: relative;
-  -webkit-transition: all 2s ease;
-  transition: all 2s ease;
-  opacity: 0;
-  -webkit-transform: translateX(-100px);
-          transform: translateX(-100px);
-}
-
-.anm-slide_left.active {
-  opacity: 1;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-.anm-slide_top {
-  -webkit-transition: all 3s ease;
-  transition: all 3s ease;
-  opacity: 0;
-  -webkit-transform: translate(40px, 40px);
-          transform: translate(40px, 40px);
-}
-
-.anm-slide_top.active {
-  opacity: 1;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
 }
 /*# sourceMappingURL=common.css.map */
