--- a/common/css/header.css
+++ b/common/css/header.css
@@ -9,6 +9,11 @@ img {
   width: 100%;
 }
 
+.header {
+  position: absolute;
+  width: 100vw;
+}
+
 .header-logo {
   width: 20vw;
   position: absolute;
