--- a/common/css/anime.css
+++ b/common/css/anime.css
@@ -33,6 +33,15 @@
   top: -200px;
 }
 
+@media (max-width: 750px) {
+  .fluid::before {
+    width: 80vw;
+    height: 66.66667vw;
+    top: inherit;
+    bottom: -50px;
+  }
+}
+
 .fluid2 {
   display: block;
   -webkit-animation: fluidrotate2 20s ease infinite;
@@ -107,11 +116,26 @@
   -webkit-transition: all 1s  ease-out;
   transition: all 1s  ease-out;
   opacity: 0;
-  -webkit-transform: translateX(-100px);
-          transform: translateX(-100px);
+  -webkit-transform: translateX(-40px);
+          transform: translateX(-40px);
 }
 
 .anm-slide_left.active {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.anm-slide_right {
+  position: relative;
+  -webkit-transition: all 1s  ease-out;
+  transition: all 1s  ease-out;
+  opacity: 0;
+  -webkit-transform: translateX(40px);
+          transform: translateX(40px);
+}
+
+.anm-slide_right.active {
   opacity: 1;
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -201,103 +225,133 @@
           transform: translate(0, 0);
 }
 
+/*========= レイアウトのためのCSS ===============*/
+p {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.5rem;
+}
+
+.anm_blur {
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  -webkit-filter: blur(15px);
+          filter: blur(15px);
+  opacity: 0;
+}
+
+.anm_blur.active {
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  opacity: 1;
+}
+
+@-webkit-keyframes blurAnime {
+  from {
+    -webkit-filter: blur(190px);
+            filter: blur(190px);
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
+    opacity: 0;
+  }
+  to {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes blurAnime {
+  from {
+    -webkit-filter: blur(190px);
+            filter: blur(190px);
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
+    opacity: 0;
+  }
+  to {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
 .anm_time1 {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.anm_l1 {
+  -webkit-transition: all 1.5s 0.5s ease;
+  transition: all 1.5s 0.5s ease;
+}
+
+.anm_ls1 {
+  -webkit-transition: all 1.5s 0.2s ease;
+  transition: all 1.5s 0.2s ease;
+}
+
+.anm_time2 {
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
 
-.anm_l1 {
-  -webkit-transition: all 2s 0.5s ease;
-  transition: all 2s 0.5s ease;
+.anm_l2 {
+  -webkit-transition: all 1.5s 1s ease;
+  transition: all 1.5s 1s ease;
 }
 
-.anm_time2 {
+.anm_ls2 {
+  -webkit-transition: all 1.5s 0.4s ease;
+  transition: all 1.5s 0.4s ease;
+}
+
+.anm_time3 {
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+}
+
+.anm_l3 {
+  -webkit-transition: all 1.5s 1.5s ease;
+  transition: all 1.5s 1.5s ease;
+}
+
+.anm_ls3 {
+  -webkit-transition: all 1.5s 0.6s ease;
+  transition: all 1.5s 0.6s ease;
+}
+
+.anm_time4 {
   -webkit-transition: all 2s ease;
   transition: all 2s ease;
 }
 
-.anm_l2 {
-  -webkit-transition: all 2s 1s ease;
-  transition: all 2s 1s ease;
-}
-
-.anm_time3 {
-  -webkit-transition: all 3s ease;
-  transition: all 3s ease;
-}
-
-.anm_l3 {
-  -webkit-transition: all 2s 1.5s ease;
-  transition: all 2s 1.5s ease;
-}
-
-.anm_time4 {
-  -webkit-transition: all 4s ease;
-  transition: all 4s ease;
-}
-
 .anm_l4 {
-  -webkit-transition: all 2s 2s ease;
-  transition: all 2s 2s ease;
+  -webkit-transition: all 1.5s 2s ease;
+  transition: all 1.5s 2s ease;
+}
+
+.anm_ls4 {
+  -webkit-transition: all 1.5s 0.8s ease;
+  transition: all 1.5s 0.8s ease;
 }
 
 .anm_time5 {
-  -webkit-transition: all 5s ease;
-  transition: all 5s ease;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
 }
 
 .anm_l5 {
-  -webkit-transition: all 2s 2.5s ease;
-  transition: all 2s 2.5s ease;
+  -webkit-transition: all 1.5s 2.5s ease;
+  transition: all 1.5s 2.5s ease;
 }
 
-.anm_time6 {
-  -webkit-transition: all 6s ease;
-  transition: all 6s ease;
-}
-
-.anm_l6 {
-  -webkit-transition: all 2s 3s ease;
-  transition: all 2s 3s ease;
-}
-
-.anm_time7 {
-  -webkit-transition: all 7s ease;
-  transition: all 7s ease;
-}
-
-.anm_l7 {
-  -webkit-transition: all 2s 3.5s ease;
-  transition: all 2s 3.5s ease;
-}
-
-.anm_time8 {
-  -webkit-transition: all 8s ease;
-  transition: all 8s ease;
-}
-
-.anm_l8 {
-  -webkit-transition: all 2s 4s ease;
-  transition: all 2s 4s ease;
-}
-
-.anm_time9 {
-  -webkit-transition: all 9s ease;
-  transition: all 9s ease;
-}
-
-.anm_l9 {
-  -webkit-transition: all 2s 4.5s ease;
-  transition: all 2s 4.5s ease;
-}
-
-.anm_time10 {
-  -webkit-transition: all 10s ease;
-  transition: all 10s ease;
-}
-
-.anm_l10 {
-  -webkit-transition: all 2s 5s ease;
-  transition: all 2s 5s ease;
+.anm_ls5 {
+  -webkit-transition: all 1.5s 1s ease;
+  transition: all 1.5s 1s ease;
 }
 /*# sourceMappingURL=anime.css.map */
