--- a/common/css/common.scss
+++ b/common/css/common.scss
@@ -125,7 +125,7 @@
         font-weight: normal;
         color: $w;
         text-shadow: 3px 3px 20px #114408;
-
+        display: inline-block;
         @include mq(tab) {
             text-align: center;
             font-size: fc(110,$tab);
@@ -187,6 +187,7 @@
     margin-top: 200px;
     @include mq(){
         display: block;
+        margin-top: vw(100);
     }
     &-re {
         flex-direction: row-reverse;
@@ -209,6 +210,7 @@
     }
     &-text {
         margin-top: vw(40,$pc);
+        text-align: left;
     }
     &-img {
         width: vw(480,960);
@@ -232,6 +234,49 @@
         text-align: center;
         line-height: 60px;
         color: #bab601;
+    }
+}
+
+.card {
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 0 0 0;
+    &-item {
+        width: 30%;
+        position: relative;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 3px 6px 0 rgba(1, 90, 52, 0.16);
+        img {
+            width: 100%;
+            height: 70%;
+            height: 180px;
+            overflow: hidden;
+            object-fit: cover;
+        }
+    }
+    &-ttl {
+        width: 100%;
+        font-size: 30px;
+        top: 180px;
+        left: -20px;
+    }
+    &-text {
+        margin-top: 10px;
+        &_box {
+            padding: 10px 10px;
+        }
+    }
+    &-btn {
+        display: block;
+        width: 80%;
+        height: 40px;
+        text-align: center;
+        line-height: 40px;
+        background: #bab601;
+        color: #fff;
+        border-radius: 30px;
+        margin: 10px auto 0;
     }
 }
 
