--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
   background-size: cover;
   background-position: center;
   background-image: url(../common/images/info-bg.jpg);
+  background-attachment: fixed;
 }
 
 .info-text_box {
@@ -24,7 +25,7 @@
 }
 
 .about-container {
-  padding: 100px 0 0 0;
+  padding: 100px 0 100px 0;
 }
 
 .about-item2 .media-ttl {
@@ -66,5 +67,15 @@
 .about-item4 .media-btn {
   border: solid 2px #093c00;
   color: #093c00;
+}
+
+.blog-container {
+  padding: 100px 0 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url(../common/images/blog-bg.jpg);
+  background-attachment: fixed;
+  height: 747px;
 }
 /*# sourceMappingURL=index.css.map */
