--- a/common/css/common.css
+++ b/common/css/common.css
@@ -127,7 +127,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/mv1.jpg);
+  background-image: url(../images/mv2.jpg);
   background-attachment: fixed;
   position: relative;
 }
@@ -137,7 +137,7 @@
 }
 
 .slide-item:nth-of-type(3) {
-  background-image: url(../images/mv3.jpg);
+  background-image: url(../images/mv2.jpg);
 }
 
 .slide-text-box {
@@ -380,5 +380,16 @@
   color: #fff;
   border-radius: 30px;
   margin: 10px auto 0;
+}
+
+.google-map {
+  margin: 30px auto 0;
+  text-align: center;
+}
+
+.google-map iframe {
+  width: 100%;
+  height: 41.66667vw;
+  max-height: 400px;
 }
 /*# sourceMappingURL=common.css.map */
