--- a/common/css/common.css
+++ b/common/css/common.css
@@ -15,6 +15,10 @@
   font-family: "Hui";
 }
 
+img {
+  vertical-align: bottom;
+}
+
 .text {
   font-family: "Noto Sans JP";
   font-size: clamp(14px, 2.13333vw, 16px);
@@ -115,6 +119,57 @@
     width: 23.2vw;
     height: 20vw;
   }
+}
+
+.btn {
+  display: block;
+  width: 300px;
+  height: 60px;
+  margin-top: 50px;
+  border-radius: 30px;
+  border: solid 2px #bab601;
+  font-size: 24px;
+  text-align: center;
+  line-height: 60px;
+  color: #bab601;
+}
+
+.btn span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  position: relative;
+  z-index: 1;
+}
+
+.btn span::before {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 0;
+  height: 100%;
+  border-radius: 30px;
+  background: #bab601;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  z-index: -1;
+}
+
+.btn:hover {
+  border: none;
+}
+
+.btn:hover span {
+  color: #fff;
+}
+
+.btn:hover span::before {
+  width: 100%;
 }
 
 .slide {
