--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,157 @@
   background-position: center;
   background-image: url(../common/images/access-bg.jpg);
   background-attachment: fixed;
-  height: 1212px;
+}
+
+.access-list {
+  background: #fff;
+  display: inline-block;
+  padding: clamp(12px, 2.08333vw, 20px) clamp(12px, 10.41667vw, 100px) clamp(12px, 5.20833vw, 50px) clamp(12px, 20.83333vw, 200px);
+  max-width: 590px;
+  max-height: 435px;
+  text-align: left;
+}
+
+.access-list dt {
+  font-size: clamp(20px, 3.125vw, 30px);
+  color: #647311;
+  margin-top: 30px;
+}
+
+.access-list dt:nth-of-type(2) {
+  color: #647311;
+}
+
+.access-list dt:nth-of-type(3) {
+  color: #bab605;
+}
+
+.access-list dd {
+  font-size: clamp(16px, 2.08333vw, 20px);
+  margin-top: 15px;
+}
+
+.access-text {
+  text-align: left;
+  font-size: 16px;
+  width: 80%;
+  margin: 40px auto 0;
+}
+
+.clip-box {
+  position: relative;
+  text-align: right;
+  margin-top: 80px;
+  z-index: 1;
+}
+
+.clip-box img {
+  position: absolute;
+  width: 50%;
+  left: 0;
+  top: 10%;
+  -webkit-transform: translate(-50px, 0);
+          transform: translate(-50px, 0);
+}
+
+.clip-box img.active {
+  position: absolute;
+  z-index: 10;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.clip-box .btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #647311;
+  border: 2px solid #647311;
+}
+
+.clip-box .btn span::before {
+  background: #647311;
+}
+
+.job-container {
+  padding: 100px 0 100px 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url(../common/images/info-bg.jpg);
+  background-attachment: fixed;
+}
+
+.job-container .job-ttl {
+  color: #fff;
+  font-size: 42px;
+}
+
+.job-container .text {
+  color: #fff;
+  line-height: 1.25;
+  text-align: left;
+  width: 40%;
+}
+
+.job-container .btn {
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+.job-container .btn span::before {
+  background: #fff;
+}
+
+.job-text_box {
+  width: 100%;
+  height: 321px;
+  margin: 50px auto 0;
+  padding: 40px 18px 40px 40px;
+  border-radius: 15px;
+  border: solid 5px #707070;
+  background-color: #fff;
+}
+
+.job-item {
+  height: 422px;
+  background: #bab601;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  width: 0;
+}
+
+.job-item::before {
+  position: absolute;
+  display: block;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  background: #fff;
+}
+
+.job-item.active {
+  width: 100%;
+}
+
+.job-item.active::before {
+  -webkit-transition: all 0.4s 0.7s ease;
+  transition: all 0.4s 0.7s ease;
+  left: 100%;
+}
+
+.job-img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50vw;
+  height: 422px;
+  border-radius: 100px 0 0 300px;
+  z-index: 10;
 }
 /*# sourceMappingURL=index.css.map */
