--- a/common/css/common.scss
+++ b/common/css/common.scss
@@ -29,6 +29,11 @@ img {
     }
 }
 
+.flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 .ly-container {
     width: 100%;
     max-width: 960px;
@@ -97,7 +102,7 @@ img {
     border: solid 2px #bab601;
     font-size: 24px;
     text-align: center;
-    line-height: 60px;
+    line-height: 56px;
     color: #bab601;
     span {
         display: block;
@@ -367,3 +372,4 @@ img {
         max-height: 400px;
     }
 }
+
