--- a/css/index.css
+++ b/css/index.css
@@ -174,18 +174,23 @@
 
 .job-container .text {
   color: #fff;
-  line-height: 1.25;
+  line-height: 1.5;
   text-align: left;
-  width: 40%;
+  margin: 30px 0;
 }
 
 .job-container .btn {
   color: #fff;
   border: 2px solid #fff;
+  margin-top: 0;
 }
 
 .job-container .btn span::before {
   background: #fff;
+}
+
+.job-container .btn:hover span {
+  color: #647311;
 }
 
 .job-text_box {
@@ -198,6 +203,10 @@
   background-color: #fff;
 }
 
+.job-text-area {
+  width: 45%;
+}
+
 .job-item {
   height: 422px;
   background: #bab601;
@@ -205,7 +214,29 @@
   overflow: hidden;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-  width: 0;
+  left: -100%;
+}
+
+.job-item:nth-of-type(2) {
+  background: #626006;
+}
+
+.job-item:nth-of-type(3) {
+  background: #647311;
+}
+
+.job-item:nth-of-type(4) {
+  background: #093c00;
+}
+
+.job-item .ly-container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .job-item::before {
@@ -221,7 +252,7 @@
 }
 
 .job-item.active {
-  width: 100%;
+  left: 0;
 }
 
 .job-item.active::before {
@@ -238,5 +269,126 @@
   height: 422px;
   border-radius: 100px 0 0 300px;
   z-index: 10;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.job-item_re {
+  left: 100%;
+}
+
+.job-item_re .job-img {
+  right: inherit;
+  left: 0;
+  border-radius: 0 300px 100px 0;
+}
+
+.job-item_re .ly-container {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.job-item_re.active::before {
+  left: -100%;
+}
+
+.link-container {
+  padding: 100px 0 100px 0;
+}
+
+.link-list {
+  margin-top: 50px;
+}
+
+.link-item {
+  width: 47%;
+  margin-bottom: 40px;
+}
+
+.link-item a {
+  display: block;
+  width: 100%;
+  height: 181px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  padding: 15px 10px 15px 15px;
+  border-radius: 20px;
+}
+
+.link-item img {
+  width: 45%;
+  height: 80%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
+
+.link-item span {
+  display: block;
+  color: #fff;
+}
+
+.link-item:nth-of-type(1) a, .link-item:nth-of-type(5) a {
+  background: #bab605;
+}
+
+.link-item:nth-of-type(2) a, .link-item:nth-of-type(6) a {
+  background: #626006;
+}
+
+.link-item:nth-of-type(3) a, .link-item:nth-of-type(7) a {
+  background: #647311;
+}
+
+.link-item:nth-of-type(4) a, .link-item:nth-of-type(8) a {
+  background: #093c01;
+}
+
+.link-text-box {
+  padding-left: 15px;
+}
+
+.link-ttl {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.link-btn {
+  font-size: 20px;
+  position: absolute;
+  bottom: 15px;
+  right: 40px;
+}
+
+.link-btn::before {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 12px;
+  height: 2px;
+  background: #fff;
+  top: 45%;
+  -webkit-transform: translateY(-50%) rotate(30deg);
+          transform: translateY(-50%) rotate(30deg);
+  right: -20px;
+}
+
+.link-btn::after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 20px;
+  height: 2px;
+  background: #fff;
+  top: 57%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: -20px;
 }
 /*# sourceMappingURL=index.css.map */
