--- a/common/css/footer.scss
+++ b/common/css/footer.scss
@@ -6,6 +6,7 @@
     background-position: center left;
     background-repeat: no-repeat;
     background-image: url(../images/bg-footer2.jpg);
+    background-attachment: fixed;
     &-item {
         width: 45%;
     }
@@ -30,12 +31,13 @@
     
     &-logo {
         display: block;
-        width: 300px;
+        width: 400px;
+        margin-bottom: 100px;
     }
     &-ttl {
         margin-top: 50px;
         color: #fff;
-        font-size: 30px;
+        font-size: 40px;
         text-shadow: 3px 3px 20px #114408;
     }
     &-item02 {
@@ -43,7 +45,7 @@
             &-inner {
                 background: rgba(255,255,255,0.8);
                 border-radius: 20px;
-                padding: 10px 0px 20px 20px;
+                padding: 40px 0px 20px 20px;
             }
             &-ttl {
                 margin-top: 0;
@@ -51,14 +53,11 @@
                 text-shadow: none;
             }
             &-list {
-                // background: #fff;
-                // display: inline-block;
-                // border-radius: 20px;
-                // padding: 40px 0px 20px 20px;
                 li {
                     margin-bottom: 10px;
                 }
                 a {
+                    width: 100%;
                     padding:5px 10px;
                     border-radius: 0;
                     text-align: left;
