--- a/css/index.scss
+++ b/css/index.scss
@@ -325,9 +325,12 @@
         padding-left: 15px;
     }
     &-ttl {
-        font-size: 25px;
+        font-size: 20px;
         // font-weight: 300;
         margin-bottom: 10px;
+    }
+    &-text {
+        font-size: 14px;
     }
     &-btn {
         font-size: 20px;
